Name: rrd
Version: 0.1
Synopsis: librrd interface
License: GPL-2
Build-Type: Simple
Cabal-Version: >= 1.2
Stability: experimental

Library
    Build-Depends: base >= 4, bindings-librrd == 0.2,
        temporary >= 1.1.1, filepath >= 1.1, directory >= 1.0
    Exposed-Modules:
        RRD.Util
        RRD.Types
        RRD.Info
        RRD.Tune
        RRD.Misc
        RRD.Resize
        RRD.Dump
        RRD.RPN
